# lab

./: .gitignore  CMakeLists.txt  README.md
example/: lapackage.cpp
example/module/: CMakeLists.txt  helloworld.cpp  main.cpp
include/: dsygvx_lapack.h  lapackage.h  lapackage.hpp  lobpcg.h  lobpcg.hpp  lobpcgSparse.hpp  sparse.hpp  utility.h  utility.hpp  utils.hpp
src/: arnoldi_rho.py  dsygvx_lapack.cpp  inverse_lapack.cpp  lapackage.cpp  lobpcg.cpp  lobpcg.py  lobpcg_eigen.cpp  main.cpp  sparse.py
test/: test1.cpp  test_lapackage.cpp  test_lobpcg.cpp  test_lobpcgSparse.cpp  test_sparse.cpp
